Change event handler invocation strategy to receive all registered handlers (#10)